[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hermes-train"
version = "1.8.54"
description = "PyTorch training for Hermes LLMs (MAL-defined models, safetensors checkpoints served by hermes-llm)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "izihawa" }
]
keywords = ["llm", "transformer", "training", "pytorch", "muon"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.6",
    "safetensors>=0.4",
    "tokenizers>=0.20",
    "numpy>=1.26",
    "zstandard>=0.22",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# Fused Mamba-1 selective-scan kernels (CUDA only)
mamba = ["mamba-ssm>=2.2"]
# Live training-curve dashboard (enabled at runtime via WANDB_API_KEY)
wandb = ["wandb>=0.18"]

[project.scripts]
hermes-train = "hermes_train.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9",
]

# CPU-only torch wheels on Linux (CI, most dev boxes without CUDA setup).
# GPU training boxes install torch with CUDA explicitly; macOS wheels already
# ship CPU+MPS from PyPI.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "sys_platform == 'linux'" }]

[tool.hatch.build.targets.wheel]
packages = ["src/hermes_train"]

[tool.pytest.ini_options]
testpaths = ["tests"]

# ── Linting: strict. Enforces (among much else) top-level imports (PLC0415),
# no silent bare excepts (BLE), pathlib usage, and numpy idioms. ──────────────
[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "W",    # pycodestyle
    "F",         # pyflakes
    "I",         # isort (import order)
    "N",         # pep8-naming
    "UP",        # pyupgrade
    "B",         # bugbear
    "C4",        # comprehensions
    "SIM",       # simplify
    "PERF",      # perflint (hot-path anti-patterns)
    "NPY",       # numpy-specific
    "PTH",       # prefer pathlib over os.path
    "PIE", "RET", "TID", "ICN", "FURB",
    "PLC", "PLE", "PLW",  # pylint conventions/errors/warnings (incl. PLC0415)
    "BLE",       # no blind `except:` without re-raise/log
    "LOG", "G",  # logging correctness
    "RUF",
]
ignore = [
    "E501",      # line length — the formatter wraps; unsplittable strings/URLs ok
    "N812",      # `torch.nn.functional as F` (idiomatic ML capitalization)
    "PLW2901",   # loop variable overwritten (common, readable in parsers)
]

[tool.ruff.lint.per-file-ignores]
# Tests: allow asserts on magic values, unused fixtures, non-PEP8 test names.
"tests/*" = ["N802", "ARG", "PLR2004", "PTH", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["hermes_train"]
